Added PlayerTags and NormalTags